--- a/app/src/main/res/layout/comment_dialog.xml
+++ b/app/src/main/res/layout/comment_dialog.xml
@@ -1,10 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/homTop"
     android:gravity="center_horizontal"
     android:orientation="vertical">
+
 
     <ImageView
         android:id="@+id/imgBackComm"
@@ -18,7 +19,7 @@
 
 
     <TextView
-        android:id="@+id/motamotTitle"
+        android:id="@+id/commentTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -76,15 +77,15 @@
 
 
     <TextView
-        android:id="@+id/motamotThanks"
+        android:id="@+id/commentThanks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:gravity="center"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
-        android:text="@string/thanks"
-        android:textColor="@color/gray"
+        android:text="@string/comment_succes"
+        android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="bold"
         android:visibility="gone" />
