--- a/app/src/main/res/layout/comment_list_dialog.xml
+++ b/app/src/main/res/layout/comment_list_dialog.xml
@@ -23,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/dim10"
             android:layout_toRightOf="@+id/imgCrossComment"
             android:text="@string/comment"
             android:textSize="18sp"
@@ -36,7 +37,7 @@
             android:layout_centerVertical="true"
             android:text="@string/comment_please"
             android:textSize="16sp"
-            android:padding="8dp"
+            android:padding="5dp"
             android:textColor="@color/homTop" />
 
 
