--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -35,9 +35,11 @@
            android:text="@string/notification2"/>
 
            <LinearLayout
+               android:layout_marginRight="15dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
+               android:gravity="right"
                android:orientation="vertical">
 
                <ToggleButton
@@ -98,6 +100,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
+                android:gravity="right"
+                android:layout_marginRight="15dp"
                 android:orientation="vertical">
                 <ToggleButton
                     android:id="@+id/soundTg"
@@ -151,6 +155,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
+                android:gravity="right"
+                android:layout_marginRight="15dp"
                 android:orientation="vertical">
                 <ToggleButton
                     android:id="@+id/vivrateTg"
